--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-scripts": "3.3.1",
-        "start": "^5.1.0"
+        "start": "^5.1.0",
+        "surge": "^0.21.3"
     },
     "scripts": {
         "start": "react-scripts start",
